<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/signIn_tv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/signIn"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/welcome_tv"
        app:layout_constraintTop_toBottomOf="@id/signIn_tv"
        app:layout_constraintStart_toStartOf="@id/signIn_tv"
        app:layout_constraintEnd_toEndOf="@id/signIn_tv"
        android:layout_marginTop="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/welcome_tv"
        app:layout_constraintEnd_toEndOf="@id/welcome_tv"
        app:layout_constraintTop_toBottomOf="@id/welcome_tv"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="20sp"
        />


    <LinearLayout
        android:id="@+id/ed_container"
       app:layout_constraintTop_toBottomOf="@id/tv_description"
        app:layout_constraintStart_toStartOf="@id/tv_description"
        app:layout_constraintEnd_toEndOf="@id/tv_description"
        android:layout_marginTop="80dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_back_ed"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/ed_pass"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_back_ed"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp"
            android:layout_marginVertical="15dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signIn_btn"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:text="@string/join"
            android:background="@drawable/ic_grey_btn_background"
            android:clickable="false"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgottenPass"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:textSize="16sp"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>